# moodle-vault

./: .env.example  .gitignore  LICENSE  README.md  README_es.md  clean.sh  main.py  main.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
cli/: commands.py
scripts/: platform.py  utils.py
scripts/integrations/: notion.py  todoist.py
scripts/scraper/: download_files.py  extract_course_tree.py  extract_dates.py  fetch_links.py  pipeline.py  reset_semanas.py  selectors.py  session.py
scripts/scraper/strategies/: __init__.py  base.py  classic.py  tiles.py
tests/: conftest.py  test_cli.py  test_download_files.py  test_extract_course_tree.py  test_fetch_links.py  test_integrations.py  test_platform.py  test_reset_semanas.py  test_utils.py
